--- a/nmr-formatter/app.html
+++ b/nmr-formatter/app.html
@@ -28,21 +28,19 @@
                 </div>
                 <div class="metadata-group">
                     <label for="frequency">Frequency (MHz):</label>
-                    <input type="number" id="frequency" class="metadata-input" step="1" placeholder="e.g., 500">
+                    <div id="frequency" class="metadata-input metadata-number" contenteditable="true" data-placeholder="e.g., 500" inputmode="numeric"></div>
                 </div>
-            </div>
-            <div class="metadata-grid">
                 <div class="metadata-group">
                     <label for="shift-precision">Chemical Shift Precision:</label>
-                    <input type="number" id="shift-precision" class="metadata-input" min="0" max="4" value="2">
+                    <div id="shift-precision" class="metadata-input metadata-number" contenteditable="true" data-placeholder="0-4" inputmode="numeric"></div>
                 </div>
                 <div class="metadata-group">
                     <label for="j-precision">J-value Precision:</label>
-                    <input type="number" id="j-precision" class="metadata-input" min="0" max="4" value="1">
+                    <div id="j-precision" class="metadata-input metadata-number" contenteditable="true" data-placeholder="0-4" inputmode="numeric"></div>
                 </div>
                 <div class="metadata-group">
                     <label for="sort-order">Sort Order:</label>
-                    <select id="sort-order" class="metadata-input">
+                    <select id="sort-order" class="metadata-input metadata-select">
                         <option value="desc">Descending (High → Low)</option>
                         <option value="asc">Ascending (Low → High)</option>
                     </select>
