Change: :zap: Use significant figures instead of precision.

--- a/nmr-formatter/app.html
+++ b/nmr-formatter/app.html
@@ -31,12 +31,12 @@
                     <div id="frequency" class="metadata-input metadata-number" contenteditable="true" data-placeholder="e.g., 500" inputmode="numeric"></div>
                 </div>
                 <div class="metadata-group">
-                    <label for="shift-precision">Chemical Shift Precision:</label>
-                    <div id="shift-precision" class="metadata-input metadata-number" contenteditable="true" data-placeholder="0-4" inputmode="numeric"></div>
+                    <label for="shift-precision">Chemical Shift Sig Figs:</label>
+                    <div id="shift-precision" class="metadata-input metadata-number" contenteditable="true" data-placeholder="1-10" inputmode="numeric"></div>
                 </div>
                 <div class="metadata-group">
-                    <label for="j-precision">J-value Precision:</label>
-                    <div id="j-precision" class="metadata-input metadata-number" contenteditable="true" data-placeholder="0-4" inputmode="numeric"></div>
+                    <label for="j-precision">J-value Sig Figs:</label>
+                    <div id="j-precision" class="metadata-input metadata-number" contenteditable="true" data-placeholder="1-10" inputmode="numeric"></div>
                 </div>
                 <div class="metadata-group">
                     <label for="sort-order">Sort Order:</label>
