Improve: :art: Typescript Refactoring - Converted monolithic app.js to modular TypeScript - Created State management layer

--- a/nmr-formatter/app.html
+++ b/nmr-formatter/app.html
@@ -102,8 +102,7 @@
         </section>
     </div>
 
-    <!-- Load browser-compatible bundle -->
+    <!-- Load browser-compatible bundle (includes all TypeScript modules) -->
     <script src="dist/browser.js"></script>
-    <script src="app.js"></script>
 </body>
 </html>
