--- a/nmr-formatter/app.html
+++ b/nmr-formatter/app.html
@@ -53,7 +53,7 @@
             <h2>Peak Data</h2>
             <div class="table-controls">
                 <button id="add-peak-btn" class="control-btn">Add Peak</button>
-                <button id="remove-peak-btn" class="control-btn">Remove Selected</button>
+
                 <div class="formatting-toolbar">
                     <span class="toolbar-label">Format:</span>
                     <button id="format-bold-btn" class="format-btn" title="Bold (Ctrl+B)"><b>B</b></button>
@@ -67,7 +67,7 @@
                 <table id="nmr-table" class="nmr-table">
                     <thead>
                         <tr>
-                            <th class="checkbox-header"><input type="checkbox" id="select-all-checkbox"></th>
+                            <th class="delete-header"></th>
                             <th>δ (ppm)</th>
                             <th>Multiplicity</th>
                             <!-- J columns will be dynamically inserted here -->
