Improve: :art: Refactor sort-order to dropdown and enhance Tab navigation
- Refactor sort-order field from <select> to contenteditable with
dropdown
  - Use same dropdown system as nuclei/solvent for consistency
  - Add SORT_ORDER_PRESETS to constants

- Implement Tab key full-text selection on field navigation
  - Add FocusManager.selectAll() method
  - Auto-select all text when Tab/Shift+Tab to next field
  - Enables quick text replacement on navigation
  - Implemented Tab/Shift+Tab full-text selection on navigation
  - Modified FocusManager to select all content when Tab navigating
  - Updated setupContentEditableField, setupNumberField handlers
  - Consistent behavior across Enter, Tab, and Shift+Tab keys

- Add empty HTML tag cleanup on blur
  - Remove empty tags like <sup> </sup>
  - Prevent placeholder issues from lingering empty elements
  - Refactored sort-order from <select> to contenteditable dropdown
  system
  - Unified with nuclei/solvent dropdown behavior
  - Added SORT_ORDER_PRESETS to constants
  - Made field read-only (no text input, dropdown selection only)
  - Applied user-select: none and caret-color: transparent to prevent cursor

- Expand E2E test coverage (38 tests, all passing)
  - Add decimal point rejection tests for numeric fields
  - Add Tab key text selection behavior tests
  - Add dropdown selection tests for nuclei/solvent/sort-order
  - Add sort-order read-only input validation tests
  - Verify all metadata form interactions
  - Added decimal point rejection tests for numeric fields
  - Added Tab/Shift+Tab text selection validation tests
  - Added sort-order non-selectable behavior tests
  - Added dropdown selection tests for nuclei/solvent/sort-order

--- a/nmr-formatter/app.html
+++ b/nmr-formatter/app.html
@@ -40,10 +40,10 @@
                 </div>
                 <div class="metadata-group">
                     <label for="sort-order">Sort Order:</label>
-                    <select id="sort-order" class="metadata-input metadata-select">
-                        <option value="desc">Descending (High → Low)</option>
-                        <option value="asc">Ascending (Low → High)</option>
-                    </select>
+                    <div id="sort-order" class="metadata-input metadata-editable" contenteditable="true" data-placeholder="Select sort order"></div>
+                    <div class="metadata-dropdown" id="sort-order-dropdown">
+                        <!-- Dropdown items will be dynamically generated from SORT_ORDER_PRESETS -->
+                    </div>
                 </div>
             </div>
         </section>
