--- a/nmr-formatter/app.html
+++ b/nmr-formatter/app.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NMR Formatter</title>
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
@@ -16,11 +17,21 @@
         <section class="toolbar-container-wrapper">
             <div class="toolbar-container">
                 <div class="toolbar">
-                    <button id="format-bold-btn" class="format-btn" title="Bold (Ctrl+B)"><b>B</b></button>
-                    <button id="format-italic-btn" class="format-btn" title="Italic (Ctrl+I)"><i>I</i></button>
-                    <button id="format-sub-btn" class="format-btn" title="Subscript">x<sub>2</sub></button>
-                    <button id="format-sup-btn" class="format-btn" title="Superscript">x<sup>2</sup></button>
-                    <button id="insert-endash-btn" class="format-btn" title="Insert en-dash">–</button>
+                    <a id="format-bold-btn" class="format-btn" title="Bold (Ctrl+B)" role="button" tabindex="0">
+                        <i class="las la-bold"></i>
+                    </a>
+                    <a id="format-italic-btn" class="format-btn" title="Italic (Ctrl+I)" role="button" tabindex="0">
+                        <i class="las la-italic"></i>
+                    </a>
+                    <a id="format-sub-btn" class="format-btn" title="Subscript" role="button" tabindex="0">
+                        <i class="las la-subscript"></i>
+                    </a>
+                    <a id="format-sup-btn" class="format-btn" title="Superscript" role="button" tabindex="0">
+                        <i class="las la-superscript"></i>
+                    </a>
+                    <a id="insert-endash-btn" class="format-btn" title="Insert en-dash" role="button" tabindex="0">
+                        <i class="las la-minus"></i>
+                    </a>
                 </div>
                 <div class="metadata">
                     <div class="metadata-group">
