--- a/nmr-formatter/app.html
+++ b/nmr-formatter/app.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NMR Formatter</title>
-    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
@@ -12,25 +12,26 @@
         <!-- Title Bar -->
         <header class="title-bar">
             <h1>NMR Formatter</h1>
+            <span>Uicons by <a href="https://www.flaticon.com/uicons">Flaticon</a></span>
         </header>
         <!-- Toolbar and Metadata Section -->
         <section class="toolbar-container-wrapper">
             <div class="toolbar-container">
                 <div class="toolbar">
                     <a id="format-bold-btn" class="format-btn" title="Bold (Ctrl+B)" role="button" tabindex="0">
-                        <i class="las la-bold"></i>
+                        <i class="fi fi-rr-bold"></i>
                     </a>
                     <a id="format-italic-btn" class="format-btn" title="Italic (Ctrl+I)" role="button" tabindex="0">
-                        <i class="las la-italic"></i>
-                    </a>
-                    <a id="format-sub-btn" class="format-btn" title="Subscript" role="button" tabindex="0">
-                        <i class="las la-subscript"></i>
+                        <i class="fi fi-rr-italic"></i>
                     </a>
                     <a id="format-sup-btn" class="format-btn" title="Superscript" role="button" tabindex="0">
-                        <i class="las la-superscript"></i>
+                        <i class="fi fi-rr-superscript"></i>
+                    </a>
+                    <a id="format-sub-btn" class="format-btn" title="Subscript" role="button" tabindex="0">
+                        <i class="fi fi-rr-subscript"></i>
                     </a>
                     <a id="insert-endash-btn" class="format-btn" title="Insert en-dash" role="button" tabindex="0">
-                        <i class="las la-minus"></i>
+                        <i class="fi fi-rr-minus"></i>
                     </a>
                 </div>
                 <div class="metadata">
