Change: :zap: Replace sort-order dropdown with icon toggle button
- Replace contenteditable dropdown with icon toggle button in HTML
- Use fi-rr-down (↓) for Descending, fi-rr-up (↑) for Ascending
- Remove setupReadOnlyDropdownField() method from MetadataForm
- Add setupSortOrderToggle() and updateSortOrderIcon() methods
- Support click, Enter, and Space key for toggling
- Maintain keyboard navigation (Tab, ArrowLeft/Right) within field group
- Update e2e tests to validate toggle button behavior
- Remove dropdown-related test cases for sort-order field

--- a/nmr-formatter/app.html
+++ b/nmr-formatter/app.html
@@ -99,10 +99,9 @@
                     </div>
                     <div class="setting-group">
                         <label for="sort-order">Sort:</label>
-                        <div id="sort-order" class="setting-input metadata-editable" contenteditable="true" data-placeholder="Sort order"></div>
-                        <div class="metadata-dropdown" id="sort-order-dropdown">
-                            <!-- Dropdown items will be dynamically generated from SORT_ORDER_PRESETS -->
-                        </div>
+                        <a id="sort-order" class="format-btn" title="Toggle sort order" role="button" tabindex="0">
+                            <i class="fi fi-rr-down"></i>
+                        </a>
                     </div>
                 </div>
                 <button id="copy-btn" class="copy-btn" title="Copy formatted text to clipboard">Copy</button>
